k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picsou
  namespace: picsou
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: picsou
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: picsou-tr-auth
  namespace: picsou
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: picsou-tr-auth
  ports:
    - name: http
      port: 8001
      targetPort: http
