k8s/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-apiserver
  namespace: picsou-finance
spec:
  endpointSelector: {}
  egress:
    - toEntities: [kube-apiserver]
